data/Java/15-incomp-return-types/4/[M]Error.txt
https://stackoverflow.com/questions/33314606/dog-java16-error-incompatible-types-unexpected-return-value
Program.java:16: error: incompatible types: unexpected return value
      return age;
             ^